--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
                    http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
 
-  <display-name>web-ssm</display-name>
+  <display-name>server-ssm</display-name>
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
