--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,6 +45,11 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <!-- 自定义spring监听器 -->
+  <listener>
+    <listener-class>com.cheng.server.main.SocketServiceLoader</listener-class>
+  </listener>
+
   <!-- spring监听器 -->
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -70,6 +75,11 @@
     <servlet-name>SpringMVC</servlet-name>
     <!-- 此处也可以配置成 *.do 形式 -->
     <url-pattern>/</url-pattern>
+
+    <url-pattern>*.map</url-pattern>
+    <url-pattern>*.js</url-pattern>
+    <url-pattern>*.css</url-pattern>
+
   </servlet-mapping>
 
   <welcome-file-list>
