--- a/pom.xml
+++ b/pom.xml
@@ -286,8 +286,14 @@
 
         <dependency>
             <groupId>com.google.protobuf</groupId>
+            <artifactId>protoc</artifactId>
+            <version>3.5.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
-            <version>3.5.1</version>
+            <version>3.5.0</version>
         </dependency>
 
         <dependency>
